update Output format